modules/security-group/main.tf
resource "aws_security_group" "web_sg" {

  name = "devops-project-sg"
  description = "Allow HTTP and SSH traffic"

  vpc_id = var.vpc_id

  ingress {

    from_port = 80
    to_port = 80
    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    from_port = 22
    to_port = 22
    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0
    to_port = 0
    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "devops-project-sg"
  }

}
